<resources>
    <string name="app_name" translatable="false">Traveler</string>
    <string name="btn_send">Send</string>
    <string name="title_main">Welcome</string>
    <string name="txt_hint_1">Name and Lastname</string>
    <string name="txt_hint_3">Height</string>
    <string name="txt_hint_4">E-mail</string>
    <string name="current_date">Current Date:</string>
    <string name="stc_on_off_act1" translatable="false">Casado</string>
    <string name="txt_casado_act2" translatable="false">Casado:</string>


    <string name="btn_settings">Go!</string>
    <string name="title_settings">Settings</string>
    <string name="app_version">Version 1.0</string>
    <string name="btn_back">Back</string>
    <string name="real_time">Real-Time Location</string>
    <string name="background">Background</string>
    <string name="battery">Battery saver</string>
    <string name="sesion_close">Log Out</string>
    <string name="power_by" translatable="false">Powered by</string>
    <string name="btn_help" translatable="false">\?</string>
</resources>